# ramayana-kg

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py  run_streamlit.sh  streamlit_app.py
.github/workflows/: ci.yml
ramayana_kg/: __init__.py  config.py  models.py  pipeline.py
ramayana_kg/data/: characters_seed.json  downloader.py  parser.py
ramayana_kg/embeddings/: vectorizer.py
ramayana_kg/extraction/: alias_resolver.py  entity_extractor.py  relationship_extractor.py
ramayana_kg/graph/: builder.py  queries.py  schema.py
ramayana_kg/rag/: generator.py  retriever.py
tests/: conftest.py  test_alias_resolver.py  test_config.py  test_downloader.py  test_entity_extractor.py  test_generator.py  test_graph_builder.py  test_i18n.py  test_models.py  test_parser.py  test_pipeline.py  test_queries.py  test_relationship_extractor.py  test_retriever.py  test_schema.py  test_vectorizer.py
ui/: i18n.py
