[project]
name = "ramayana-kg"
version = "0.1.0"
description = "Ramayana Knowledge Graph with LLM entity extraction and hybrid RAG"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
